base/certbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: letsencrypt
  name: certbot-svc
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: letsencrypt
  type: ClusterIP
